--- a/style.css
+++ b/style.css
@@ -20,6 +20,18 @@ h1{
     line-height: 1.4;
     size: 3rem;
 }
+h3{
+    font-weight: 850;
+    font-size: 120%;
+}
+h2{
+    font-size: 1.8rem;
+}
+h4{
+    /* breed type in pricing section */
+    font-weight: 700;
+}
+
 /* navbar */
 
 .navbar{
@@ -39,19 +51,21 @@ h1{
 
 /* download buttons */
 .btn{
-    margin: 10% 2% 0;
+    margin: 10% 2% 10%;
 }
 /* title image */
 .title-img{
-    width: 70%;
-    padding-left: 4rem;
+    width: 60%;
     transform: rotate(25deg);
+    position: absolute;
+    right: 25%;
     
 }
 
 /* features section */
 #features{
-    /* height: 20rem; */
+    background-color: #fff;
+    position: relative;
 }
 .features-box{
     text-align: center;
@@ -60,7 +74,7 @@ h1{
 
 
 .features-icon{
-line-height: 1.3;
+line-height: 1.8;
 color: #ef8172;
 transition: all 0.3s linear;
 }
@@ -68,11 +82,103 @@ transition: all 0.3s linear;
     transform: scale(1.1);
     color: #ff4c68;
 }
-h3{
-    font-weight: 850;
-    font-size: 120%;
-}
+
 
 .features-text{
     color: rgb(123, 109, 109);
+}
+
+/* testmonials */
+#testimonials{
+    background-color: #EA5B70;;
+    padding: 7% 13% 2%;
+    text-align: center;
+    color: white;
+}
+.testimonial-image{
+    width: 15%;
+    border-radius: 100%;
+    padding: 3% 3%;
+}
+
+.carousel{
+    margin: 0;
+}
+.next-prev-icon{
+    width: 2%;
+}
+
+/* press */
+#press{
+    background-color:#EA5B70;
+    padding: 3% 11% ;
+    text-align: center;
+}
+.press-image{
+    width: 15%;
+    margin: 2% 2% 3%;
+
+}
+
+/* pricing */
+#pricing{
+    padding: 3% 13%;
+    text-align: center;
+}
+.card{
+    margin: 3% 2%;
+}
+.pricing-button{
+    padding-bottom: 2%;
+    background-color: #EA5B70;
+    color: white;
+}
+.pricing-button:hover{
+    background-color: #E8417E;
+}
+/* call to action section */
+#cta{
+    background-color: #EA5B70;
+    padding: 3% 13%;
+    text-align: center;
+}
+.cta-text{
+    color: white;
+    font-weight: 800;
+    font-size: 3.5rem;
+    padding: 3% 0 3%;
+
+}
+.cta-button{
+    margin: 2% 2% 5%;
+}
+
+/* footer section */
+#footer{
+    padding: 5% 13%;
+    text-align: center;
+    font-size: small;
+}
+.footer-icon{
+    margin: 0 0.6%;
+}
+
+
+@media (max-width:1028px) {
+    #title{
+        text-align: center;
+    }
+    .title-img{
+        position: static;
+        transform: rotate(0);
+        width: 80%;
+        
+    }
+    #pricing{
+        padding: 7% 13%;
+    }
+    .card{
+        margin: 4% 8%;
+    }
+    
 }
